Correcciones menores de código
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/trunk/project@2726 dcdbb401-323c-49cf-88a0-803402807c85